--- a/internal_shop_app/templates/home.html
+++ b/internal_shop_app/templates/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,30 +10,34 @@
     <title>Angel Pets</title>
   </head>
   <body class="">
-    <header class="flex justify-between p-3">
-      Angel Pets
+    <header class="flex flex-col items-center justify-center p-3 shadow-sm sm:shadow-2xl">
+      <img
+          class="sm:w-32 sm:h-32 w-24 h-24 rounded-full object-cover shadow-xl flex"
+          src="{% static 'images/logo.png' %}"
+          alt="Logo de la empresa"
+        />
       <nav>
-        <ul class="flex max-w-sm gap-2">
+        <hr class="bg-red-700">
+        <ul class="flex max-w-sm gap-4 justify-center text-xl text-red-800 font-semibold py-2">
           <li><a href="{% url 'home' %}">Home</a></li>
           <li><a href="{% url 'tabla' %}">Inventario</a></li>
           <li><a href="">Acerca de</a></li>
         </ul>
       </nav>
     </header>
-    <main class="flex m-2 min-h-screen justify-center">
+    <main class="flex m-1 min-h-screen justify-center">
       {% block main-section %}
-      <div class="flex flex-col sm:flex-row flex items-center text-center">
-        <div>
-          <p>Lorem ipsum dolor sit amet.</p>
-          <button>Leer mas</button>
-        </div>
+      <div class="flex flex-col sm:flex-row flex items-center text-center gap-8 py-10">
         <img
-          class="object-none"
-          src="https://media.istockphoto.com/id/1296353202/es/foto/grupo-de-mascotas-posando-alrededor-de-un-collie-fronterizo-perro-gato-hur%C3%B3n-conejo-p%C3%A1jaro-pez.jpg?s=612x612&w=0&k=20&c=L2IMPfImJLLGeXTYUIpoFJ9JrnOjHvxgzr-sYbtAZaQ="
+          class=""
+          src="{% static 'images/home (2).jpg' %}"
           alt=""
         />
+        <div>
+          <p>Bienvenido al Inventario de nuestra empresa</p>
+          <button class="rounded-xl font-mono bg-red-700 text-white px-3 py-1">Manual</button>
+        </div>
       </div>
-
       {% endblock main-section %}
     </main>
   </body>
