creacion modificar y eliminar

--- a/internal_shop_app/templates/eliminar.html
+++ b/internal_shop_app/templates/eliminar.html
@@ -1,6 +1,5 @@
 {% block main-section %}
-<h1>Seguro quiere eliminar el producto {{id}}</h1>
-<button>Confirmar</button>
-<button>Cancelar</button>
+<h1>Producto Eliminado</h1>
+<a href="{% url 'tabla' %}"><p>Regresar</p></a>
 
 {% endblock main-section %}
