--- a/internal_shop_app/templates/home.html
+++ b/internal_shop_app/templates/home.html
@@ -12,30 +12,30 @@
   <body class="">
     <header class="flex flex-col items-center justify-center p-3 shadow-sm sm:shadow-2xl">
       <img
-          class="sm:w-32 sm:h-32 w-24 h-24 rounded-full object-cover shadow-xl flex"
+          class="sm:w-32 sm:h-32 w-24 h-24 rounded-full object-cover shadow-xl flex py-3"
           src="{% static 'images/logo.png' %}"
           alt="Logo de la empresa"
         />
       <nav>
-        <hr class="bg-red-700">
-        <ul class="flex max-w-sm gap-4 justify-center text-xl text-red-800 font-semibold py-2">
-          <li><a href="{% url 'home' %}">Home</a></li>
-          <li><a href="{% url 'tabla' %}">Inventario</a></li>
-          <li><a href="">Acerca de</a></li>
+        <hr class="bg-red-700 my-3">
+        <ul class="flex max-w-sm gap-4 justify-center text-xl text-red-800 font-semibold">
+          <li class="hover:text-red-600"><a href="{% url 'home' %}">Home</a></li>
+          <li class="hover:text-red-600"><a href="{% url 'tabla' %}">Inventario</a></li>
+          <li class="hover:text-red-600"><a href="">Ventas</a></li>
         </ul>
       </nav>
     </header>
     <main class="flex m-1 min-h-screen justify-center">
       {% block main-section %}
-      <div class="flex flex-col sm:flex-row flex items-center text-center gap-8 py-10">
+      <div class="flex flex-col sm:flex-row flex items-center text-center gap-8 py-10 sm:flex-row-reverse">
         <img
           class=""
           src="{% static 'images/home (2).jpg' %}"
           alt=""
         />
-        <div>
-          <p>Bienvenido al Inventario de nuestra empresa</p>
-          <button class="rounded-xl font-mono bg-red-700 text-white px-3 py-1">Manual</button>
+        <div class="max-w-xs sm:max-w-sm md:max-w-screen-md">
+          <p class="text-xl text-red-700 font-sans font-bold">Bienvenido al Inventario de nuestra empresa!</p>
+          <button class="rounded-xl font-mono bg-red-700 text-white px-3 py-1 my-4">Manual aqui</button>
         </div>
       </div>
       {% endblock main-section %}
