--- a/internal_shop_app/templates/mostrar_tabla.html
+++ b/internal_shop_app/templates/mostrar_tabla.html
@@ -1,8 +1,11 @@
 {% extends "home.html" %} {% block main-section %}
 <div class="flex flex-col gap-2">
-  <a href="{% url 'agregar producto' %}">
-    <p class="px-3 py-1 outline outline-1">Añadir Producto</p></a
-  >
+  <div class="flex justify-between items-center">
+    <h3>Productos</h3>
+    <a href="{% url 'agregar producto' %}">
+      <p class="px-3 py-1 outline outline-1 rounded-md">Añadir Producto</p></a
+    >
+  </div>
 
   <table class="table-auto outline outline-1">
     <thead>
