--- a/internal_shop_app/templates/agregar_venta.html
+++ b/internal_shop_app/templates/agregar_venta.html
@@ -1,7 +1,10 @@
 {% extends "home.html" %} {% block main-section %}
 <div class="flex flex-col text-center outline outline-1 p-4 gap-3">
-  <h1 class="text-xl font-semibold">Agregar Producto</h1>
-  <form method="POST" class="flex flex-col items-center justify-center text-lg gap-2">
+  <h1 class="text-xl font-semibold">Agregar Venta</h1>
+  <form
+    method="POST"
+    class="flex flex-col items-center justify-center text-lg gap-2"
+  >
     {% csrf_token %} {{form}}
 
     <button class="py-1 px-4 rounded-md bg-slate-200 outline outline-1">
