--- a/internal_shop_app/templates/tabla_venta.html
+++ b/internal_shop_app/templates/tabla_venta.html
@@ -1,35 +1,41 @@
 {% extends "home.html" %} {% block main-section %}
-<div class="flex flex-col gap-2">
+<div class="flex flex-col gap-2  w-full mx-10">
   <div class="flex justify-between items-center">
-    <h3>Ventas</h3>
+    <h3 class="text-red-800 font-bold" >Ventas</h3>
     <a href="{% url 'agregar venta' %}">
-      <p class="px-3 py-1 outline outline-1 rounded-md">Añadir Venta</p></a
+      <p class="px-3 py-1  rounded-md font-bold">Añadir Venta</p><img class="mx-10" width="30" height="30"
+      src="https://img.icons8.com/ios/50/add--v1.png" alt="Agregar producto" /></a
     >
   </div>
 
-  <table class="table-auto outline outline-1">
+  <table class="border-red-700 table-fixed h-auto">
     <thead>
-      <tr class="">
-        <th>Producto</th>
-        <th>Cantidad</th>
-        <th>Fecha</th>
-        <th>Hora</th>
+      <tr class="bg-red-300 text-black">
+        <th class="border border-red-300">Producto</th>
+        <th class="border border-red-300">Cantidad</th>
+        <th class="border border-red-300">Fecha</th>
+        <th class="border border-red-300">Hora</th>
+        <th class="border border-red-300">Editar</th>
+        <th class="border border-red-300">Eliminar</th>
       </tr>
     </thead>
     <tbody>
       {% for venta in ventas %}
 
-      <tr class="">
-        <td class="">{{venta.id_producto}}</td>
-        <td class="text-center">{{venta.cantidad}}</td>
-        <td>{{venta.fecha}}</td>
-        <td>{{venta.hora}}</td>
-        <td>
-          <a href=""><p class="ml-2">modificar</p></a>
+      <tr>
+        <td class="border border-red-300 p-2">{{venta.id_producto}}</td>
+        <td class="border border-red-300 text-center p-2">{{venta.cantidad}}</td>
+        <td class="border border-red-300 text-center p-2">{{venta.fecha}}</td>
+        <td class="border border-red-300 text-center p-2">{{venta.hora}}</td>
+        <td class="border border-red-300 p-2 flex items-center justify-center"
+          <a href=""><img width="35" height="35"
+            src="https://img.icons8.com/external-xnimrodx-lineal-xnimrodx/64/external-manage-export-and-delivery-xnimrodx-lineal-xnimrodx.png"
+            alt="Editar producto" /></a>
         </td>
-        <td>
+        <td class="border border-red-300 text-center p-2">
           <a href="{% url 'eliminar venta' venta.id  %}"
-            ><p class="ml-2">eliminar</p></a
+            ><img width="30" height="30"
+            src="https://img.icons8.com/ios/50/waste.png" alt="Eliminar Producto" /></a
           >
         </td>
       </tr>
