--- a/internal_shop_app/templates/tabla_venta.html
+++ b/internal_shop_app/templates/tabla_venta.html
@@ -1,11 +1,16 @@
 {% extends "home.html" %} {% block main-section %}
-<div class="flex flex-col gap-2  w-full mx-10">
+<div class="flex flex-col gap-2 w-full mx-10">
   <div class="flex justify-between items-center">
-    <h3 class="text-red-800 font-bold" >Ventas</h3>
+    <h3 class="text-red-800 font-bold">Ventas</h3>
     <a href="{% url 'agregar venta' %}">
-      <p class="px-3 py-1  rounded-md font-bold">Añadir Venta</p><img class="mx-10" width="30" height="30"
-      src="https://img.icons8.com/ios/50/add--v1.png" alt="Agregar producto" /></a
-    >
+      <p class="px-3 py-1 rounded-md font-bold">Añadir Venta</p>
+      <img
+        class="mx-10"
+        width="30"
+        height="30"
+        src="https://img.icons8.com/ios/50/add--v1.png"
+        alt="Agregar producto"
+    /></a>
   </div>
 
   <table class="border-red-700 table-fixed h-auto">
@@ -22,13 +27,30 @@
     <tbody>
       {% for venta in ventas %}
 
-
-        </td>
+      <tr>
+        <td class="border border-red-300 p-2">{{venta.id_producto}}</td>
         <td class="border border-red-300 text-center p-2">
+          {{venta.cantidad}}
+        </td>
+        <td class="border border-red-300 text-center p-2">{{venta.fecha}}</td>
+        <td class="border border-red-300 text-center p-2">{{venta.hora}}</td>
+        <td class="border border-red-300 p-2 flex items-center justify-center">
+          <a href="{% url 'editar venta' venta.id  %}"
+            ><img
+              width="35"
+              height="35"
+              src="https://img.icons8.com/external-xnimrodx-lineal-xnimrodx/64/external-manage-export-and-delivery-xnimrodx-lineal-xnimrodx.png"
+              alt="Editar venta"
+          /></a>
+        </td>
+        <td class="border border-red-300 p-2">
           <a href="{% url 'eliminar venta' venta.id  %}"
-            ><img width="30" height="30"
-            src="https://img.icons8.com/ios/50/waste.png" alt="Eliminar Producto" /></a
-          >
+            ><img
+              width="30"
+              height="30"
+              src="https://img.icons8.com/ios/50/waste.png"
+              alt="Eliminar venta"
+          /></a>
         </td>
       </tr>
 
