--- a/internal_shop_app/templates/agregar_producto.html
+++ b/internal_shop_app/templates/agregar_producto.html
@@ -1,11 +1,11 @@
 {% extends "home.html" %} {% block main-section %}
-<div class="flex flex-col text-center outline outline-1 p-4 gap-3">
-  <h1 class="text-xl font-semibold">Agregar Producto</h1>
-  <form method="POST" class="flex flex-col items-center justify-center text-lg gap-2">
+<div class="flex flex-col text-center border border-red-200 p-4 gap-3 shadow-xl my-2">
+  <h1 class="text-xl text-red-800 font-bold">Agregar Producto</h1>
+  <form method="POST" class="flex flex-col  text-lg gap-2">
     {% csrf_token %} {{form}}
 
-    <button class="py-1 px-4 rounded-md bg-slate-200 outline outline-1">
-      <strong>Save</strong>
+    <button class="py-1 px-4 rounded-md outline outline-1 rounded-xl font-mono bg-red-700 text-white px-3 py-1 my-4">
+      <strong>Guardar</strong>
     </button>
   </form>
 </div>
