--- a/internal_shop_app/templates/home.html
+++ b/internal_shop_app/templates/home.html
@@ -13,7 +13,7 @@
     <header class="flex flex-col items-center justify-center p-3 shadow-md sm:shadow-xl">
       <img
           class="sm:w-32 sm:h-32 w-24 h-24 rounded-full object-cover shadow-xl flex py-3"
-          src="{% static 'images/logo.png' %}"
+          src="{% static 'images/logo2.png' %}"
           alt="Logo de la empresa"
         />
       <nav>
