--- a/internal_shop_app/templates/editar_venta.html
+++ b/internal_shop_app/templates/editar_venta.html
@@ -1,14 +1,19 @@
 {% extends "home.html" %} {% block main-section %}
 
-<div class="flex flex-col items-center">
-  <h1 class="text-xl">Editar Venta</h1>
+<div
+  class="flex flex-col text-center border border-red-200 p-4 gap-3 shadow-xl my-2"
+>
+  <h1 class="text-xl text-red-800 font-bold">Editar Venta</h1>
 
-  <form method="POST">
+  <form method="POST" class="flex flex-col text-lg gap-2">
     {% csrf_token %} {{form}}
 
-    <button class="py-1 px-4 rounded-md bg-slate-200 outline outline-1">
-      <strong>Confirmar</strong>
+    <button
+      class="py-1 px-4 rounded-md outline outline-1 rounded-xl bg-red-700 text-white px-3 py-1 my-4 font-semibold"
+    >
+      Confirmar
     </button>
+    <a href="{% url 'ventas' %}"><p class="font-semibold">Cancelar</p></a>
   </form>
 </div>
 {% endblock main-section %}
