--- a/internal_shop_app/templates/eliminar_producto.html
+++ b/internal_shop_app/templates/eliminar_producto.html
@@ -1,6 +1,15 @@
-{% block main-section %}
-<h1>seguro de elimianr producto: {{producto.nombre}}</h1>
-<a href="{% url 'eliminar yes' producto.id %}"><p>Confirmar</p></a>
-<a href="{% url 'tabla' %}"><p>Cancelar</p></a>
+{% extends "home.html" %} {% block main-section %}
+<div
+  class="flex flex-col text-center items-center border border-red-200 p-4 gap-3 shadow-xl my-2"
+>
+  <h1 class="text-xl text-red-800 font-bold">Eliminar Producto</h1>
+  <p class="text-lg">¿Desea eliminar el producto: {{producto.nombre}}?</p>
+  <a
+    class="py-1 px-4 rounded-xl outline outline-1 bg-red-700 text-white font-semibold my-4"
+    href="{% url 'eliminar yes' producto.id %}"
+    ><p>Confirmar</p></a
+  >
+  <a href="{% url 'tabla' %}" class="font-semibold"><p>Cancelar</p></a>
+</div>
 
 {% endblock main-section %}
