--- a/internal_shop_app/templates/mostrar_tabla.html
+++ b/internal_shop_app/templates/mostrar_tabla.html
@@ -1,13 +1,18 @@
-{% extends "home.html" %} {% block main-section %}
-{% load static %}
+{% extends "home.html" %} {% block main-section %} {% load static %}
 <div class="flex flex-col gap-2 w-full mx-10">
   <div class="flex justify-between items-center">
     <h1 class="text-red-800 font-bold">Productos</h1>
     <a href="{% url 'agregar producto' %}">
-      <p class="px-3 py-1  rounded-md font-bold">Añadir Producto<img class="mx-10" width="30" height="30"
-          src="https://img.icons8.com/ios/50/add--v1.png" alt="Agregar producto" /></p>
+      <p class="px-3 py-1 rounded-md font-bold">
+        Añadir Producto<img
+          class="mx-10"
+          width="30"
+          height="30"
+          src="https://img.icons8.com/ios/50/add--v1.png"
+          alt="Agregar producto"
+        />
+      </p>
     </a>
-
   </div>
 
   <table class="border-red-700 table-fixed h-auto">
@@ -27,16 +32,31 @@
       <tr>
         <td class="border border-red-300 p-2">{{prod.nombre}}</td>
         <td class="border border-red-300 text-center p-2">{{prod.precio}}</td>
-        <td class="border border-red-300 text-center p-2">{{prod.categoria}}</td>
-        <td class="border border-red-300 text-center p-2">{{prod.reserva}}</td>
-        <td class="border border-red-300 p-2 flex items-center justify-center">
-          <a href="{% url 'editar' prod.id  %}"><img width="35" height="35"
-              src="https://img.icons8.com/external-xnimrodx-lineal-xnimrodx/64/external-manage-export-and-delivery-xnimrodx-lineal-xnimrodx.png"
-              alt="Editar producto" /></a>
+        <td class="border border-red-300 text-center p-2">
+          {{prod.categoria}}
         </td>
-        <td class="border border-red-300 p-2 ">
-          <a href="{% url 'eliminar' prod.id  %}"><img width="30" height="30"
-              src="https://img.icons8.com/ios/50/waste.png" alt="Eliminar Producto" /></a>
+        <td class="border border-red-300 text-center p-2">{{prod.reserva}}</td>
+        <td class="border border-red-300 p-2  ">
+          <a
+            class="flex items-center justify-center"
+            href="{% url 'editar' prod.id  %}"
+            ><img
+              width="35"
+              height="35"
+              src="https://img.icons8.com/external-xnimrodx-lineal-xnimrodx/64/external-manage-export-and-delivery-xnimrodx-lineal-xnimrodx.png"
+              alt="Editar producto"
+          /></a>
+        </td>
+        <td class="border border-red-300 p-2">
+          <a
+            class="flex items-center justify-center"
+            href="{% url 'eliminar' prod.id  %}"
+            ><img
+              width="30"
+              height="30"
+              src="https://img.icons8.com/ios/50/waste.png"
+              alt="Eliminar Producto"
+          /></a>
         </td>
       </tr>
 
