--- a/internal_shop_app/templates/tabla_venta.html
+++ b/internal_shop_app/templates/tabla_venta.html
@@ -34,8 +34,8 @@
         </td>
         <td class="border border-red-300 text-center p-2">{{venta.fecha}}</td>
         <td class="border border-red-300 text-center p-2">{{venta.hora}}</td>
-        <td class="border border-red-300 p-2 flex items-center justify-center">
-          <a href="{% url 'editar venta' venta.id  %}"
+        <td class="border border-red-300 p-2  ">
+          <a class="flex items-center justify-center " href="{% url 'editar venta' venta.id  %}"
             ><img
               width="35"
               height="35"
@@ -44,7 +44,7 @@
           /></a>
         </td>
         <td class="border border-red-300 p-2">
-          <a href="{% url 'eliminar venta' venta.id  %}"
+          <a class="flex items-center justify-center " href="{% url 'eliminar venta' venta.id  %}"
             ><img
               width="30"
               height="30"
