--- a/internal_shop_app/templates/eliminar_venta.html
+++ b/internal_shop_app/templates/eliminar_venta.html
@@ -1,6 +1,6 @@
 {% extends "home.html" %} {% block main-section %}
 <div
-  class="flex flex-col text-center items-center border border-red-200 p-4 gap-3 shadow-xl my-2"
+  class="flex flex-col text-center border border-red-200 py-6 px-12 gap-3 shadow-xl my-2"
 >
   <h1 class="text-xl text-red-800 font-bold">Eliminar Venta</h1>
   <p class="text-lg">¿Desea eliminar la venta?</p>
