--- a/internal_shop_app/templates/mostrar_tabla.html
+++ b/internal_shop_app/templates/mostrar_tabla.html
@@ -1,7 +1,7 @@
 {% extends "home.html" %} {% block main-section %} {% load static %}
 <div class="flex flex-col gap-2 w-full mx-10">
   <div class="flex justify-between items-center">
-    <h1 class="text-red-800 font-bold">Productos</h1>
+    <h1 class="text-red-800 font-semibold text-2xl">Productos</h1>
     <a href="{% url 'agregar producto' %}">
       <p class="px-3 py-1 rounded-md font-bold">
         Añadir Producto<img
