--- a/internal_shop_app/templates/tabla_venta.html
+++ b/internal_shop_app/templates/tabla_venta.html
@@ -1,7 +1,7 @@
 {% extends "home.html" %} {% block main-section %}
 <div class="flex flex-col gap-2 w-full mx-10">
   <div class="flex justify-between items-center">
-    <h3 class="text-red-800 font-bold">Ventas</h3>
+    <h3 class="text-red-800 font-semibold text-2xl">Ventas</h3>
     <a href="{% url 'agregar venta' %}">
       <p class="px-3 py-1 rounded-md font-bold">Añadir Venta</p>
       <img
@@ -29,7 +29,9 @@
       {% for venta in ventas %}
       <tr>
         <td class="border border-red-300 p-2">{{venta.id_producto}}</td>
-        <td class="border border-red-300 text-center p-2">{{venta.cantidad}}</td>
+        <td class="border border-red-300 text-center p-2">
+          {{venta.cantidad}}
+        </td>
         <td class="border border-red-300 text-center p-2">{{venta.importe}}</td>
         <td class="border border-red-300 text-center p-2">{{venta.fecha}}</td>
         <td class="border border-red-300 text-center p-2">{{venta.hora}}</td>
