perf: add style

--- a/internal_shop_app/templates/home.html
+++ b/internal_shop_app/templates/home.html
@@ -34,8 +34,8 @@
           alt=""
         />
         <div class="max-w-xs sm:max-w-sm md:max-w-screen-md md:pl-8">
-          <p class="text-xl text-red-700 font-sans font-bold ">Bienvenido al Inventario de nuestra empresa!</p>
-          <button class="rounded-xl font-mono bg-red-700 text-white px-3 py-1 my-4">Manual aqui</button>
+          <p class="text-4xl text-red-700 font-sans font-bold max-w-md">Bienvenido al Inventario de nuestra empresa!</p>
+          <button class="rounded-xl bg-red-700 text-white px-3 py-1 my-4 font-semibold">Manual aquí</button>
         </div>
       </div>
       {% endblock main-section %}
