--- a/internal_shop_app/templates/editar_venta.html
+++ b/internal_shop_app/templates/editar_venta.html
@@ -6,7 +6,8 @@
   <h1 class="text-xl text-red-800 font-bold">Editar Venta</h1>
 
   <form method="POST" class="flex flex-col text-lg gap-2">
-    {% csrf_token %} {{form}}
+    {% csrf_token %}
+    <div class="flex flex-col items-start gap-2">{{form}}</div>
 
     <button
       class="py-1 px-4 rounded-md outline outline-1 rounded-xl bg-red-700 text-white px-3 py-1 my-4 font-semibold"
